@@ -2,12 +2,7 @@ package com.teamdev.fsm;
 
 import com.google.common.base.Preconditions;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.LinkedHashSet;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Set;
+import java.util.*;
 
 public class TransitionMatrixBuilder<O, E extends Exception> {
 
@@ -16,7 +11,7 @@ public class TransitionMatrixBuilder<O, E extends Exception> {
 
     public TransitionMatrixBuilder<O, E> withStartState(State<O, E> state) {
         Preconditions.checkState(startState == null,
-                                 "Start state is already determined.");
+                "Start state is already determined.");
 
         this.startState = Preconditions.checkNotNull(state);
         return this;
@@ -24,10 +19,17 @@ public class TransitionMatrixBuilder<O, E extends Exception> {
 
     @SafeVarargs
     public final TransitionMatrixBuilder<O, E> allowTransition(State<O, E> state,
-                                                            State<O, E>... transitionStates) {
+                                                               State<O, E>... transitionStates) {
         Preconditions.checkNotNull(state, transitionStates);
 
-        transitions.put(state, new LinkedHashSet<>(Arrays.asList(transitionStates)));
+        Preconditions.checkNotNull(state, transitionStates);
+
+        if (transitions.containsKey(state)) {
+            transitions.get(state).addAll(List.of(transitionStates));
+            return this;
+        }
+
+        transitions.put(state, new LinkedHashSet<>(List.of(transitionStates)));
         return this;
     }
 
